ZON-1719: Add comments sorting UI and use SVG sprites

--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -23,3 +23,8 @@ a
 	// normal, hover, active, visited, focus
 	+link-colors($color-link--default, $color-link--hover, $color-link--active, $color-link--visited, $color-link--focus)
 	text-decoration: none
+
+svg
+	fill: currentColor
+	// see: http://bugs.jquery.com/ticket/11352
+	pointer-events: none
