--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,4 +1,4 @@
-<div class="comment-section__form">
+<div class="comment-section__item">
 {%- if request.authenticated_userid %}
 	<form class="comment-form" action="{{ view.comments.comment_post_url }}" method="POST" id="comment-form">
 		<div class="comment-form__text">
