--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -104,8 +104,6 @@ $color-comment-border: $zon_light_grey
 			color: $zon_mid_grey
 		+on-interaction
 			color: $zon_dark_grey
-			.comment__icon
-				opacity: 1
 		font-size: remify(12px)
 		letter-spacing: $zon-letter-spacing-s
 
@@ -117,8 +115,6 @@ $color-comment-border: $zon_light_grey
 		&:first-child
 			margin-left: 0
 		&--active
-			.comment__icon
-				opacity: 1
 			+link
 				color: $zon-red
 
@@ -186,28 +182,30 @@ $color-comment-border: $zon_light_grey
 
 // icons
 .comment__badge
-	+background-size(contain)
 	+inline-block
+	background-color: $zon-charcoal
+	border-radius: 2px
+	color: $white
 	height: remify(16px)
 	margin-right: remify(6px)
 	vertical-align: text-top
 	width: remify(16px)
 	&--promoted
-		background-color: $zon-charcoal
-		border-radius: 2px
-		color: $white
 		font-size: remify(12px)
 		text-align: center
 
 .comment__icon
-	+background-size(contain)
-	+inline-block
-	background-position: right center
-	height: remify(16px)
-	opacity: 0.55
 	vertical-align: text-bottom
-	width: remify(17px)
-	&--sending
+	&-reply
+		width: remify(17px)
+		height: remify(15px)
+	&-report
+		width: remify(14px)
+		height: remify(16px)
+	&-recommend
+		width: remify(17px)
+		height: remify(16px)
+	.comment__reaction--sending &
 		+animation(rotate 1s linear infinite)
 
 +keyframes(rotate)
