--- a/src/zeit/web/core/templates/inc/ads/adcontroller/head.html
+++ b/src/zeit/web/core/templates/inc/ads/adcontroller/head.html
@@ -25,11 +25,11 @@
     if (typeof AdController !== 'undefined') {
             AdController.setPageInfo({
             $handle: '{% if view.banner_type %}{{ view.banner_type }}{% endif %}',
-            $autoSizeFrames: true,
             level2: '{% if view.ressort %}{{ view.ressort }}{% endif %}',
             level3: '{% if view.sub_ressort %}{{ view.sub_ressort }}{% endif %}',
-            keywords: '{% if view.adwords %}{{ view.adwords|join(',') }}{% endif %}',
-            tma: ''
+            keywords: '',
+            tma: '',
+            $autoSizeFrames: true
         });
         AdController.initialize();
     }
