ZON-1674: Add dummy placeholder

--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,8 +1,10 @@
 {% set pid = view.request.GET['commentpid'] %}
 {% if pid %}
 	{% set submit_value = 'Antwort senden' %}
+	{% set placeholder = 'Ihre Antwort auf Kommentar #' + pid %}
 {% else %}
 	{% set submit_value = 'Kommentar senden' %}
+	{% set placeholder = 'Ihr Kommentar' %}
 {% endif %}
 
 <div class="comment-section__form">
