--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -41,28 +41,28 @@
             <span class="sharing-menu__title js-sharing-menu">Teilen</span>
             <ul class="sharing-menu__items">
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--facebook" href="http://www.facebook.com/sharer/sharer.php?u={{ view.article_url }}" target="_blank">
+                    <a class="sharing-menu__link sharing-menu__link--facebook" href="http://www.facebook.com/sharer/sharer.php?u={{ view.content_url }}" target="_blank">
                         Facebook
                     </a>
                 </li>
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--twitter" href="http://twitter.com/intent/tweet?text={{ view.title }}&amp;url={{ view.article_url }}&amp;via=zeitonline" target="_blank">
+                    <a class="sharing-menu__link sharing-menu__link--twitter" href="http://twitter.com/intent/tweet?text={{ view.title }}&amp;url={{ view.content_url }}&amp;via=zeitonline" target="_blank">
                         Twitter
                     </a>
                 </li>
                 {# Google+ will be closed in the near future, all info is fetched automaticall, no params needed #}
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--google" href="https://plus.google.com/share?url={{ view.article_url }}" target="_blank">
+                    <a class="sharing-menu__link sharing-menu__link--google" href="https://plus.google.com/share?url={{ view.content_url }}" target="_blank">
                         Google +
                     </a>
                 </li>
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--mail" href="mailto:?subject={{ view.title }} - Artikel auf ZEIT ONLINE&body=Artikel auf ZEIT ONLINE lesen: {{ view.article_url }}">
+                    <a class="sharing-menu__link sharing-menu__link--mail" href="mailto:?subject={{ view.title }} - Artikel auf ZEIT ONLINE&body=Artikel auf ZEIT ONLINE lesen: {{ view.content_url }}">
                         Mail
                     </a>
                 </li>
                 <li class="sharing-menu__item sharing-menu__item--whatsapp">
-                    <a class="sharing-menu__link sharing-menu__link--whatsapp" href="whatsapp://send?text={{ view.title }} - Artikel auf ZEIT ONLINE: {{ view.article_url }}">
+                    <a class="sharing-menu__link sharing-menu__link--whatsapp" href="whatsapp://send?text={{ view.title }} - Artikel auf ZEIT ONLINE: {{ view.content_url }}">
                         WhatsApp
                     </a>
                 </li>
