--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,5 +1,5 @@
-{% set pid = view.request.GET['commentpid'] %}
-{% if pid %}
+{% set pid = view.request.GET['pid'] %}
+{% if view.request.GET['form'] == 'comment' %}
 	{% set submit_value = 'Antworten' %}
 	{% set placeholder = 'Ihre Antwort auf Kommentar #' + pid %}
 {% else %}
