--- a/src/zeit/web/site/templates/inc/comments/report-comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/report-comment-form.html
@@ -1,3 +1,8 @@
+{% if view.request.GET['form'] == 'report' %}
+	{% set cid = view.request.GET['rid'] %}
+{% else %}
+	{% set cid = '<% commentId %>' %}
+{% endif %}
 	<form action="{{ view.comments.comment_report_url }}" method="POST" class="comment-form" id="report-comment-form">
 		<textarea name="note" placeholder="Warum halten Sie diesen Kommentar für bedenklich?" class="comment-form__textarea js-required"></textarea>
 		<p class="comment-form__text">
@@ -6,8 +11,8 @@
 		</p>
 		<p class="comment-form__actions">
 			<input type="hidden" name="uid" value="{{ request.session.user.uid }}">
-			<input type="hidden" name="content_id" value="<% commentId %>">
-			<a href="{{ view.article_url }}" class="comment-form__cancel js-cancel-report">Abbrechen</a>
+			<input type="hidden" name="content_id" value="{{ cid }}">
+			<a href="{{ view.content_url }}" class="comment-form__cancel js-cancel-report">Abbrechen</a>
 			<button disabled="disabled" class="button js-submit-report" type="button">Abschicken</button>
 		</p>
 	</form>
