--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,7 +1,8 @@
-{% set pid = view.request.GET['commentpid'] %}
+{% set pid = view.request.GET['commentpid'] | e %}
 {% if pid %}
 	{% set submit_value = 'Antworten' %}
-	{% set placeholder = 'Ihre Antwort auf Kommentar #' + pid %}
+	{% set comment = view.comments.index[pid | int] | e %}
+	{% set placeholder = 'Ihre Antwort auf Kommentar #' + comment.shown_num | e + ' von ' + comment.name | e %}
 {% else %}
 	{% set submit_value = 'Kommentar senden' %}
 	{% set placeholder = 'Ihr Kommentar' %}
