--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -29,6 +29,7 @@
 			<input type="hidden" name="nid" value="{{ view.comments.nid }}">
 			<input type="hidden" name="pid" value="{{ pid }}">
 			<input type="hidden" name="uid" value="{{ request.session.user.uid }}">
+			<a href="{{ view.article_url }}" class="comment-form__cancel js-cancel-report">Abbrechen</a>
 			<input class="button" type="submit" value="{{ submit_value }}" />
 		</p>
 	</form>
