--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -3,9 +3,11 @@
 	{% set submit_value = 'Antworten' %}
 	{% set comment = view.comments.index[pid | int] | e %}
 	{% set placeholder = 'Ihre Antwort auf Kommentar #' + comment.shown_num | e + ' von ' + comment.name | e %}
+	{% set class = '' %}
 {% else %}
 	{% set submit_value = 'Kommentar senden' %}
 	{% set placeholder = 'Ihr Kommentar' %}
+	{% set class = 'comment-form__cancel--hidden' %}
 {% endif %}
 
 <div class="comment-section__form">
@@ -29,7 +31,7 @@
 			<input type="hidden" name="nid" value="{{ view.comments.nid }}">
 			<input type="hidden" name="pid" value="{{ pid }}">
 			<input type="hidden" name="uid" value="{{ request.session.user.uid }}">
-			<a href="{{ view.article_url }}" class="comment-form__cancel js-cancel-reply-to-comment">Abbrechen</a>
+			<a href="{{ view.article_url }}" class="comment-form__cancel {{ class }} js-cancel-reply">Abbrechen</a>
 			<input class="button" type="submit" value="{{ submit_value }}" />
 		</p>
 	</form>
