--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,17 +1,15 @@
-<div class="{{ 'cp-area' | with_mods(area | get_layout, area.width | area_width) }}">
+<div class="{{ 'cp-area' | with_mods(area.kind) }}">
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() -%}
         {% set teaser = module | first_child %}
         {% set index = loop.index %}
         {% block before_module_include scoped %}{% endblock %}
-        {# XXX Because most teaser templates still expect a global variable `teaser` we need to prevent
-           unrecognized modules, that don't behave like teaser blocks, from using the default teaser template.
-           We can id them by checking if they contain a `first_child` teaser. (ND) #}
         {% include
             ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout, area.kind),
              "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout, area.kind),
-             "zeit.web.site:templates/inc/module/.html".format(module | get_layout)] +
-             (teaser and ["zeit.web.site:templates/inc/teaser/{}.tpl".format(module | get_layout | default("default.tpl"))] or []) ignore missing %}
+             "zeit.web.site:templates/inc/module/{}.html".format(module | get_layout),
+             "zeit.web.site:templates/inc/teaser/{}.tpl".format(module | get_layout),
+             "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
     {% block after_module_list %}{% endblock %}
