--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,7 +1,7 @@
 {% set pid = view.request.GET['pid'] | e %}
 {% if pid %}
 	{% set submit_value = 'Antworten' %}
-	{% set comment = view.comments.index[pid | int] | e %}
+	{% set comment = view.comments.index[pid | int] %}
 	{% set placeholder = 'Ihre Antwort auf Kommentar #' + comment.shown_num | e + ' von ' + comment.name | e %}
 	{% set class = '' %}
 {% else %}
