ZON-1720: Use comment API and enable »recommend comment«

--- a/src/zeit/web/core/templates/post_test_comments.html
+++ b/src/zeit/web/core/templates/post_test_comments.html
@@ -23,8 +23,8 @@
                     <label for="path"> für Pfad (z.B.: artikel/01)</label>
                 </p>
                 <p>
-                    <input id="pid" type="text" name="pid"/>
-                    <label for="pid">bezieht sich auf (pid)</label>
+                    <input id="cid" type="text" name="cid"/>
+                    <label for="cid">bezieht sich auf (parent comment ID)</label>
                 </p>
                 <p>
                     <select id="action" name="action">
