--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,7 +1,7 @@
-{% set pid = view.request.GET['pid'] | e %}
-{% if pid %}
+{% set cid = view.request.GET['pid'] | e %}
+{% if cid %}
 	{% set submit_value = 'Antworten' %}
-	{% set comment = view.comments.index[pid | int] %}
+	{% set comment = view.comments.index[cid | int] %}
 	{% set placeholder = 'Ihre Antwort auf Kommentar #' + comment.shown_num | e + ' von ' + comment.name | e %}
 	{% set class = '' %}
 {% else %}
@@ -13,7 +13,7 @@
 <div class="comment-section__form">
 {%- if request.authenticated_userid %}
 	{%- block comment_form %}
-	<form class="comment-form" action="{{ view.comments.comment_post_url }}" method="POST" id="comment-form">
+	<form class="comment-form" method="POST" id="comment-form">
 		<div class="comment-form__text">
 			{% if request.session.user.picture %}
 			<img class="comment-form__avatar" alt="Avatarbild von {{ request.session.user.name | e }}" src="{{ request.session.user.picture }}">
@@ -28,9 +28,8 @@
 		</div>
 		<textarea class="comment-form__textarea js-required" name="comment" placeholder="{{ placeholder }}" maxlength="1500"></textarea>
 		<p class="comment-form__actions">
-			<input type="hidden" name="nid" value="{{ view.comments.nid }}">
-			<input type="hidden" name="pid" value="{{ pid }}">
-			<input type="hidden" name="uid" value="{{ request.session.user.uid }}">
+			<input type="hidden" name="action" value="comment">
+			<input type="hidden" name="cid" value="{{ cid }}">
 			<a href="{{ view.content_url }}" class="comment-form__cancel {{ class }} js-cancel-reply">Abbrechen</a>
 			<input class="button" type="submit" value="{{ submit_value }}" />
 		</p>
@@ -55,7 +54,7 @@
 {%- if request.authenticated_userid %}
 	{% include "zeit.web.site:templates/inc/comments/report-comment-form.html" %}
 {%- else %}
-	<form class="comment-login" style="display: none">
+	<form class="comment-login">
 		<p>
 			Bitte melden Sie sich an, um diesen Kommentar zu melden.
 		</p>
