--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,7 +1,8 @@
-{% set pid = view.request.GET['pid'] | e %}
-{% if pid %}
+{% set pid = view.request.GET['pid'] | int | d(None) %}
+{% set comment = view.comments.index[pid] | d(None) %}
+
+{% if comment %}
 	{% set submit_value = 'Antworten' %}
-	{% set comment = view.comments.index[pid | int] %}
 	{% set placeholder = 'Ihre Antwort auf Kommentar #' + comment.shown_num | e + ' von ' + comment.name | e %}
 	{% set class = '' %}
 {% else %}
