ZON-1674: Improve error handling for missing pid

--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,5 +1,5 @@
-{% set pid = view.request.GET['pid'] | int | d(None) %}
-{% set comment = view.comments.index[pid] | d(None) %}
+{% set pid = view.request.GET['pid'] | d(None) %}
+{% set comment = view.comments.index[pid | int] | d(None) %}
 
 {% if comment %}
 	{% set submit_value = 'Antworten' %}
