--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,5 +1,8 @@
 {% set pid = view.request.GET['pid'] | d(None) %}
-{% set comment = view.comments.index[pid | int] | d(None) %}
+
+{%- if pid and view.comments -%}
+	{% set comment = view.comments.index[pid | int] | d(None) %}
+{%- endif %}
 
 {% if comment %}
 	{% set submit_value = 'Antworten' %}
