--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -1,7 +1,7 @@
-{% set pid = view.request.GET['pid'] | d(None) %}
+{% set cid = view.request.GET['pid'] | d(None) %}
 
-{%- if pid and view.comments -%}
-	{% set comment = view.comments.index[pid | int] | d(None) %}
+{%- if cid and view.comments -%}
+	{% set comment = view.comments.index[cid | int] | d(None) %}
 {%- endif %}
 
 {% if comment %}
