ZON-1520: Default canonical for all

--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -20,6 +20,7 @@
     <meta name="application-name" content="ZEIT ONLINE">
     <meta name="msapplication-TileImage" content="http://images.zeit.de/static/img/zo-icon-win8-144x144.png">
     <meta name="msapplication-TileColor" content="#e6e6e6">
+    <link rel="canonical" href="{{ view.canonical_url }}">
     {% if view.prev_page_url -%}
         <meta rel="prev" href="{{ view.prev_page_url }}">
     {% endif -%}
