--- a/src/zeit/web/magazin/templates/feature_longform.html
+++ b/src/zeit/web/magazin/templates/feature_longform.html
@@ -30,10 +30,10 @@
 {% block longform_logo %}
     <a href="http://{{ view.request.host }}/index" class="main-nav__logo" itemscope itemtype="http://schema.org/Organization" id="hp.zm.topnav.logo./index">
         <meta itemprop="name" content="Zeit Online">
-        <h1 class="main-nav__logo__wrap">
+        <div class="main-nav__logo__wrap">
             <span class="main-nav__logo__img icon-logo-zon-large" itemprop="logo" title="ZEIT ONLINE">ZEIT ONLINE</span>
             <span class="main-nav__logo__img icon-logo-zon-small"></span>
-        </h1>
+        </div>
     </a>
 {% endblock longform_logo %}
 
