--- a/src/zeit/web/magazin/templates/longform.html
+++ b/src/zeit/web/magazin/templates/longform.html
@@ -17,10 +17,10 @@
             {% block longform_logo %}
             <a href="http://{{ request.host }}/zeit-magazin/index" class="main-nav__logo" itemscope itemtype="http://schema.org/Organization" id="hp.zm.topnav.logo./zeit-magazin/index">
                 <meta itemprop="name" content="Zeit Online">
-                <h1 class="main-nav__logo__wrap">
+                <div class="main-nav__logo__wrap">
                     <span class="main-nav__logo__img icon-logo-zmo-large" itemprop="logo" title="ZEITmagazin">ZEITmagazin ONLINE</span>
                     <span class="main-nav__logo__img icon-logo-zmo-small"></span>
-                </h1>
+                </div>
             </a>
             {% endblock longform_logo %}
             <div class="main-nav__menu">
