ZON-1521: supertitle and title as article h1
… everywhere!

--- a/sass/web.magazin/modules/_article-head-variations.sass
+++ b/sass/web.magazin/modules/_article-head-variations.sass
@@ -109,6 +109,9 @@
       margin-bottom: $compact
     +respond-min($break-3)
       font-size: $font-xxxl
+  h1
+    +respond-min($break-1)
+      margin-top: em(-25px)
   .article__head__subtitle
     p
       +body-type-zoom
