--- a/src/zeit/web/site/templates/inc/area/minor.html
+++ b/src/zeit/web/site/templates/inc/area/minor.html
@@ -3,7 +3,7 @@
 {% extends "zeit.web.site:templates/inc/area/default.html" %}
 
 {% block after_module_include %}
-    {% if area_loop.index == 1 %}
+    {% if module_loop.index == 1 %}
         {{ lama.adplace(view.banner(7), view) }}
     {% endif %}
 {% endblock %}
