ZON-1527: Logo h1 only on homepage

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -94,6 +94,8 @@ $zon-search-square-size: remify(35px)
 
 .logo_bar__image
 	display: inline-block
+	font-size: inherit
+	margin: 0
 	a
 		+hide-text
 		@extend %main_nav_icons
