ZON-1714: Add comments pagination

--- a/sass/web.site/modules/_basics.sass
+++ b/sass/web.site/modules/_basics.sass
@@ -5,6 +5,9 @@
 .nowrap
 	white-space: nowrap
 
+.visually-hidden
+	+visuallyhidden
+
 // override normalize.css
 input[type="search"]
 	+box-sizing(border-box)
