--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -52,10 +52,7 @@
 		height: em(14px) // em intended
 
 	&__form
-		margin-left: auto
-		margin-right: auto
-		max-width: remify(700px)
-		padding: 0 $page-padding
+		border-top: 1px solid $zon_lighter_grey
 
 		.comment-form__cancel--hidden
 			display: none
