--- a/sass/web.site/modules/article/_infobox.sass
+++ b/sass/web.site/modules/article/_infobox.sass
@@ -65,10 +65,11 @@
 			font-family: sans-serif
 			font-weight: 700
 			height: remify(17px)
-			line-height: remify(15px)
+			line-height: 1
 			margin-left: remify(10px)
 			text-align: center
-			vertical-align: text-bottom
+			text-decoration: none
+			vertical-align: middle
 			width: remify(17px)
 			+inline-block
 			+font-smoothing
@@ -79,6 +80,7 @@
 			text-decoration: none
 			&:after
 				content: "–"
+				text-decoration: none
 				+respond-min($break-tablet-min)
 					display: none
 		.js &--displayed
