--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -2,13 +2,16 @@
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() -%}
         {% set teaser = module | first_child %}
+        {# XXX jinja 2.7 could solve this ugliness with the `map` filter. #}
+        {% set module = module | get_module %}
+        {% set layout = module | get_layout %}
         {% set module_loop = loop %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout, area.kind),
-             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout, area.kind),
-             "zeit.web.site:templates/inc/module/{}.html".format(module | get_layout),
-             "zeit.web.site:templates/inc/teaser/{}.tpl".format(module | get_layout),
+            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(layout, area.kind),
+             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(layout, area.kind),
+             "zeit.web.site:templates/inc/module/{}.html".format(layout),
+             "zeit.web.site:templates/inc/teaser/{}.tpl".format(layout),
              "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
