--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -22,6 +22,7 @@
 @import "modules/footer"
 @import "modules/parquet"
 @import "modules/page"
+
 // teaser
 @import "modules/teaser/teaser"
 @import "modules/teaser/teaser-beta"
@@ -29,6 +30,7 @@
 @import "modules/teaser/teaser-buzz"
 @import "modules/teaser/teaser-column"
 @import "modules/teaser/teaser-fullwidth"
+@import "modules/teaser/teaser-topic"
 @import "modules/teaser/teaser-large"
 @import "modules/teaser/teaser-parquet-large"
 @import "modules/teaser/teaser-parquet-small"
@@ -37,9 +39,11 @@
 @import "modules/teaser/teaser-small"
 @import "modules/teaser/teaser-small-minor"
 @import "modules/teaser/teaser-square"
+
 // centerpage
 @import "modules/centerpage/centerpage"
 @import "modules/centerpage/snapshot"
+
 // video-stage
 @import "modules/video/video-stage"
 @import "modules/video/video-stage-heading"
