Polish comment headline

--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -23,6 +23,13 @@
 			font-size: remify(20px)
 			display: inline
 			margin-bottom: 0
+			text-align: left
+		small
+			color: $zon_mid_grey
+			display: block
+			font-size: remify(12px)
+			font-weight: normal
+			letter-spacing: $zon-letter-spacing-m
 	&__button
 		white-space: nowrap
 		&:after
