--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -15,10 +15,20 @@
 			img
 				width: 100%
 
+		&--marginalia
+			clear: both
+			margin: remify(40px) auto
+			width: 90%
+
 		+respond-min($break-tablet-min)
 			max-width: remify(660px)
 			margin-left: auto
 			margin-right: auto
+
+			&--marginalia
+				float: left
+				margin: remify(14px 25px 14px 0)
+				width: remify(205px)
 
 		+respond-min($break-desktop-min)
 			&--wide
@@ -27,6 +37,11 @@
 
 			&--full
 				max-width: none
+
+			&--marginalia
+				margin: remify(16px 25px 16px 60px)
+				width: remify(220px)
+
 
 .article__subheading,
 .article-page__page-teaser
