Fix: cp-area--parquet padding

--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -17,7 +17,7 @@
 	padding: 0 $cp-padding
 	float: left
 	width: 100%
-	&--parquet
+	&--parquet,
 	&--spektrum
 		padding: 0
 	+respond-min($break-tablet-min)
