--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -64,6 +64,7 @@
 @import "modules/breaking-news-banner"
 @import "modules/article/article"
 @import "modules/article/paragraph"
+@import "modules/article/list"
 @import "modules/article/article-heading"
 @import "modules/article/metadata"
 @import "modules/article/infobox"
