--- a/src/zeit/web/site/templates/inc/area/topic.html
+++ b/src/zeit/web/site/templates/inc/area/topic.html
@@ -1,11 +1,18 @@
 <div class="{{ 'cp-area' | with_mods(area.kind) }}">
     {% block before_module_list %}{% endblock %}
-    {% for module in area.values()[:1] -%}
+    {% block before_module_include scoped %}{% endblock %}
+    {% set module = area.values()[:1][0] %}
+    {% set teaser = module | first_child %}
+    {% set module_layout = module | get_layout %}
+    {% include "zeit.web.site:templates/inc/teaser_asset/{}_zon-topic.tpl".format(teaser | auto_select_asset | block_type)
+        ignore missing with context %}
+    {% include
+        ["zeit.web.site:templates/inc/teaser/zon-topic-main.tpl",
+         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
+    {% for module in area.values()[1:] -%}
         {% set teaser = module | first_child %}
-        {% set area_loop = loop %}
-        {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/teaser/zon-topic.tpl",
+            ["zeit.web.site:templates/inc/teaser/zon-topic-list.tpl",
              "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
