ZON-1692: Change border color

--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -90,6 +90,8 @@
 		+respond-min($break-desktop-min)
 			font-size: $font-xxxl
 			line-height: 1.28em
+	&__title:hover
+		color: $white
 
 .teaser-topic-list
 	display: none
@@ -105,7 +107,7 @@
 		display: block
 		width: 15%
 		height: 0px
-		border-bottom: 1px solid $zon_grey
+		border-bottom: 1px solid $zon_light_grey
 		margin-bottom: $petite
 		padding-bottom: $petite
 	&:last-child:after
@@ -131,3 +133,5 @@
 			font-size: $font-m
 		+respond-min($break-desktop-min)
 			font-size: $font-ml
+	&__title:hover
+		color: $white
